--- a/Validacion/index.html
+++ b/Validacion/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang = "en">
 <head>
 	<meta charset="UTF-8">
@@ -12,19 +12,43 @@
 	<!--
 	label[for = username]{usuario:}
 	-->
-	<form action = "/" method="post">
+	<script src="/js/script.js"></script>
+	<form method="post" action = "/send/">
+		<!--
 		<label for = "username">usuario</label>
-		<input type = "text" name="username" placeholder="por ejemplo, juan" minlength="5" maxlength="40">
-		<label for = "password">password:</label>
-		<input type = "password" name="password" placeholder="Contraseña"
-          minlength = "11">
-          edad:
-          <input type = "number" name="age" placeholder="25" min="18" max="60">
-          fecha de inicio:
-          <input type = "date" name="date" placeholder="2024-07-22"
-          min = "2024-01-01" max="2024-12-01">
+		<input type = "text" name="username" placeholder="por ejemplo, juan" minlength="5" maxlength="40" required patter= "[0-9] [0-9] 39 [0-9]{4}">
+		-->
+		Usuario:
+  		<input type="text" name="username" placeholder="Por ejemplo, Juan"
+          minlength="5" maxlength="40" required pattern="[A-Za-z0-9]+">
           <br/><br/>
+
+  		Password:
+  		<input type="password" name="password" placeholder="Contraseña"
+          minlength="11">
+		<br/><br/>
+
+    	edad:
+        <input type = "number" name="age" placeholder="25" min="18" max="60">
+        <br/><br/>
+
+        fecha de inicio:
+        <input type = "date" name="date" placeholder="2024-07-22"
+        min = "2024-01-01" max="2024-12-01" step="2">
+        <br/><br/>
+
+  			<input type="text" name="username" placeholder="ManzDev"
+         	required ="[A-Za-z0-9]{5,40}"
+         	title="Letras y números. Tamaño: 5-40">
+         	<br/><br/>
+
+         	<label for = "numControl">Numero de control:</label>
+		<input type = "text" name="numControl" placeholder="Escribe tu numero de control" minlength="8" maxlength="9" required patter= "(C|M|D)?[0-9] [2] 39 [0-9]{4}" title="El número de control tiene este formato: dd39dddd y opcionalmente lleva una letra inicial: C=Cambio de carrera, M=Mestría, D=Doctorado">
+		<br/><br/>
+
           <input type = "submit" value="enviar">
+
+</form>  
 	</form>	
 </body>
 </html>
